k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-deployment
  labels:
    app: hello
spec:
  replicas: 3
  selector:
    matchLabels:
      app: hello
  template:
    metadata:
      labels:
        app: hello
    spec:
      containers:
        - name: hello
          image: registry.digitalocean.com/hello/hello:latest
          resources:
            requests:
              cpu: 100m
          ports:
            - containerPort: 8080
            - containerPort: 6001
