k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-service
spec:
  selector:
    app: hello
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: reverb
      port: 6001
      targetPort: 6001
  type: ClusterIP
